[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/game/maps/portal.png" type="Texture" id=1]
[ext_resource path="res://content/src/game/entities/portal/portal.gd" type="Script" id=2]
[ext_resource path="res://content/src/game/entities/interact/interact_area.gd" type="Script" id=3]
[ext_resource path="res://content/src/game/maps/core/map_agent.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[node name="Portal" type="Node2D"]
script = ExtResource( 2 )

[node name="MapAgent" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BaseSprite" type="Sprite" parent="."]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="ChromaSprite" type="Sprite" parent="."]
light_mask = 0
material = SubResource( 1 )
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="InteractArea" type="Area2D" parent="."]
position = Vector2( 0, -16 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractArea"]
polygon = PoolVector2Array( 0, -16, 30, 0, 0, 16, -30, 0 )

[connection signal="triggered" from="InteractArea" to="." method="_on_InteractArea_triggered"]
